--- a/app/src/main/res/layout/activity_path.xml
+++ b/app/src/main/res/layout/activity_path.xml
@@ -3,7 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.fly.viewdemo.path.PathMeasureDemo
+<!--    <com.fly.viewdemo.path.PathMeasureDemo
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />-->
+    <com.fly.viewdemo.path.LoadingView
+        android:id="@+id/leaf_loading"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </android.support.constraint.ConstraintLayout>
